--- a/pitstop/frontend/Phase-01/package.json
+++ b/pitstop/frontend/Phase-01/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
